Try to fix bug causing compose tweet form to be misaligned

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,6 @@ header {
   align-items: center;
   width: 100%;
   margin: 0 auto;
-  width: 100%;
   background-color: #f08400;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
