--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,7 +5,7 @@ container {
   justify-content: flex-start;
   width: 90%;
   margin: 0 auto;
-  align-content: flex-start;
+  align-items: flex-start;
 }
 
 .textarea {
